# ShikaMath

./: CMakeLists.txt  LICENSE  README.ja.md  README.md  output.ppm  shaded.cube.ppm  solid_triangle.ppm  triangle.ppm
include/: Canvas.h  Common.h  Matrix4x4.h  Mesh.h  Rasterizer.h  Vector3.h
src/: Rasterizer.cpp
tests/: Benchmark.cpp  MathTest.cpp
